--- a/HeaderParser_MicroService/package.json
+++ b/HeaderParser_MicroService/package.json
@@ -1,10 +1,12 @@
 {
   "name": "request-header-parser-microservice",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "API project for freeCodeCamp",
+  "author": "Sameer",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch index.js"
+    "start": "node index.js",
+    "dev": "node --watch ./api/index.js"
   },
   "dependencies": {
     "cors": "^2.8.1",
@@ -19,7 +21,6 @@
     "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
   },
   "homepage": "https://github.com/freeCodeCamp/boilerplate-project-headerparser#readme",
-  "author": "freeCodeCamp <team@freecodecamp.org>",
   "keywords": [
     "freeCodeCamp",
     "node",
